service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mivu-gui-fe-service
spec:
  selector:
    app: mivu-gui-fe
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
