ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mivu-gui-fe-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: mivu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mivu-gui-fe-service
                port:
                  number: 80
  tls:
    - hosts:
        - mivu.local
      secretName: mivu-fe-tls
